# RamaPie

./: .gitignore  .pre-commit-config.yaml  RamaPie.py  pyproject.toml  requirements.txt  requirements_dev.txt
ramapie/: __init__.py  version.py
ramapie/controller/: __init__.py  main_controller.py
ramapie/model/: __init__.py  main_model.py  path_model.py  qt_worker_model.py
ramapie/model/settings/: __init__.py  display_model.py  settings_model.py
ramapie/view/: __init__.py  main_view.py
