# -----------------------------------------------------------------------------
# Project: RamaPie
# File: pyproject.toml
# Author: Christofanis Skordas (skordasc@uchicago.edu)
# -----------------------------------------------------------------------------
# Purpose:
# This file contains the configuration for the project.
#
# This program is free software: you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation, either version 3 of the License, or
# (at your option) any later version.
#
# This program is distributed in the hope that it will be useful,
# but WITHOUT ANY WARRANTY; without even the implied warranty of
# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
# GNU General Public License for more details.
#
# You should have received a copy of the GNU General Public License
# along with this program.  If not, see <https://www.gnu.org/licenses/>.
# ----------------------------------------------------------------------

[build-system]
requires = [
    "setuptools >= 69.2.0",
    "setuptools_scm >= 8.0.4",
    "wheel",
]
build-backend = "setuptools.build_meta"

[project]
name = "RamaPie"
version = "0.0.1"
authors = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"},
    {name = "Stella Chariton", email = "52049100+CharitonS@users.noreply.github.com"}
]
maintainers = [
    {name = "Christofanis Skordas", email = "55315750+skordaschristofanis@users.noreply.github.com"}
]
description = "Raman map collections software"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Topic :: Scientific/Engineering"
]
requires-python = ">=3.12"
dependencies = [
    "PyQt6>=6.6.1",
    "QtPy>=2.4.1"
]

[project.optional-dependencies]
development = [
    "black>=24.3.0",
    "flake8>=7.0.0",
    "mypy>=1.9.0",
    "pre-commit>=3.6.2",
    "setuptools>=69.2.0"
]

[project.urls]
Homepage = "https://github.com/GSECARS/RamaPie"
Issues = "https://github.com/GSECARS/RamaPie/issues"

[tool.black]
line-length = 160
target-version = ['py312']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.mypy_cache
  | build
  | dist
)/
'''

[tool.flake8]
exclude = ".git,__pycache__,build,dist"
max-line-length = 160

[tool.mypy]
mypy_path = "ramapie"
check_untyped_defs = true
disallow_any_generics = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
no_implicit_reexport = true
